--- a/src/composer.json
+++ b/src/composer.json
@@ -10,6 +10,7 @@
         "laravel/breeze": "^1.20",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
+        "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.8"
     },
     "require-dev": {
