--- a/www/bukp00/sp/composer.json
+++ b/www/bukp00/sp/composer.json
@@ -3,7 +3,8 @@
     "require": {
         "janu-software/facebook-php-sdk": "^0.1.13",
         "symfony/http-client": "^6.0",
-        "nyholm/psr7": "^1.8"
+        "nyholm/psr7": "^1.8",
+        "php-http/message-factory": "^1.1"
     },
     "authors": [
         {
