--- a/www/vitd04/sp/apps/nextjs/package.json
+++ b/www/vitd04/sp/apps/nextjs/package.json
@@ -42,6 +42,8 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/eslint-plugin-query": "^4.29.4",
     "@tanstack/react-query-devtools": "^4.29.6",
+    "@types/google.maps": "^3.53.2",
+    "@types/googlemaps": "^3.43.3",
     "@types/set-cookie-parser": "^2.4.2",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
