--- a/www/vitd04/sp/apps/laravel/.env.example
+++ b/www/vitd04/sp/apps/laravel/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1
+APP_URL=http://localhost
 FRONTEND_URL=http://127.0.0.1:3000
 
 LOG_CHANNEL=stack
@@ -58,5 +58,5 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=356608849969-qcmprkvlpm20c2v72ds9hoo773pum90b.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
